--- a/functions/package.json
+++ b/functions/package.json
@@ -14,7 +14,8 @@
   "main": "index.js",
   "dependencies": {
     "firebase-admin": "^9.12.0",
-    "firebase-functions": "^3.14.1"
+    "firebase-functions": "^3.14.1",
+    "moment-timezone": "^0.5.34"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.2.0"
