--- a/functions/package.json
+++ b/functions/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "firebase-admin": "^9.12.0",
     "firebase-functions": "^3.14.1",
+    "moment": "^2.29.1",
     "moment-timezone": "^0.5.34"
   },
   "devDependencies": {
