--- a/functions/package.json
+++ b/functions/package.json
@@ -13,6 +13,7 @@
   },
   "main": "index.js",
   "dependencies": {
+    "axios": "^0.26.0",
     "firebase-admin": "^9.12.0",
     "firebase-dynamic-links": "^1.1.0",
     "firebase-functions": "^3.18.0",
